# ekko

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.local.md  CLAUDE.md  Dockerfile  Dockerfile.transcriber  Makefile  README.md  WIP.md  docker-compose.yml  interest_selector.py  pyproject.toml  question_master.py  questions.csv  questions.json  requirements.txt  sphinx_docstring_guide.py  user_data.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  cicd.yml  release.yml
audio_transcriber/: demo_summary.md
docs/: crewAI_101.md  environment-variables-proposal.md  how_to_uv.md  yt_dlp_guide.md
ekko_prototype/: app.py  auth.py  config.py  logging_config.py  models.py
ekko_prototype/agents/: __init__.py  transcript_crew.py
ekko_prototype/experiments/: lightning_sdk_test.py  status_update_test.py
ekko_prototype/pages/: 1_landing.py  app.py  feedback_record.py.disabled
ekko_prototype/pages/tools/: audio_transcriber.py  episode_downloader.py  feed_parser.py  openai_whisper_transcriber.py  podcast_chatbot.py  podcast_finder.py  retry.py  summary_creator.py  transcriber_server.py  transcript_fetcher.py  youtube_detector.py
ekko_prototype/pages/tools/docker_images/hugging_face_whisper_endpoint/: dockerfile
ekko_prototype/pages/tools/prompts/: episode_classifier.md  extract_wisdom_shortened.md  extract_wisdom_updated.md  multi_category.yaml
ekko_prototype/pages/tools/resources/: Prototype_Evaluation_Questions.json  Survey_Questions.json  Target_Audience_Questions.json  interests.json
ekko_prototype/transcripts/: #197 The Future of Programming with Kyle Daigle, COO at GitHub
experiments/: ngrok_server.py  streamling_client.py
rss_parser/: db_connection_manager.py  episode_downloader.py  feed_parser.py  main.py  rss_bank.csv  thediaryofaceo.xml
scripts/: setup_credentials.sh
tests/: test_auth.py  test_ekko_playwright.py  test_feed_parser.py  test_openai_whisper.py  test_retry.py  test_transcript_integration.py  test_youtube_fix.py  test_youtube_transcript.py
